Update padding and background of gui select to improve user experience Update parameter about size in Escalator class to correctly calculate aisle positions Fix bug in Simulation class where person was being pushed towards the wrong side Improve user interface by adding more consistent spacing between elements

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -144,6 +144,14 @@ h2 .big {
     color: rgba( 30, 30, 30, 0.9 );
 }
 
+#gui select {
+    padding: 3px 2px 1px 2px;
+    height: 17px;
+    background: rgba( 255, 255, 255, 0.1 );
+    border: 0.5px solid rgba( 100, 100, 100, 0.8 );
+    border-radius: 2px;
+}
+
 #gui li.cr.function,
 #gui li.cr.number,
 #gui li.cr.boolean {
